--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
                             <input type='hidden' name='sid1' value='adwords' />
                             <input type='hidden' name='sid2' value='nikita' />
                             <input type='hidden' name='sid3' value='01' />
-                            <input type='hidden' name='redirect_url' value='http://healthblogm.com/topic/inflamaya-gel-italy/success/' />
+                            <input type='hidden' name='redirect_url' value='https://arthrolon-off.github.io/roo/success/' />
                         </form>
 
                     </div>
